# FinanceMind

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_auth_tables.py  0002_create_portfolio_market_tables.py  0003_create_dividend_receipts.py  0004_create_glossary_tables.py  0005_create_ai_chat_tables.py
backend/app/: main.py
backend/app/ai/llm/: base.py  groq_provider.py
backend/app/api/v1/: ai_chat.py  auth.py  deps.py  glossary.py  market.py  portfolio.py  router.py  (+3 more)
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/integrations/: bcb_client.py  brapi_client.py  email.py  google_oauth.py  tesouro_client.py
backend/app/jobs/: market_sync_job.py  scheduler.py
backend/app/models/: __init__.py  ai_chat.py  asset.py  asset_price_history.py  benchmark_history.py  dividend_receipt.py  glossary.py  oauth_account.py  portfolio.py  subscription.py  transaction.py  user.py
backend/app/schemas/: ai_chat.py  auth.py  dashboard.py  dividend.py  glossary.py  market.py  portfolio.py  simulation.py
backend/app/services/: ai_chat_service.py  auth_service.py  dashboard_service.py  glossary_service.py  market_service.py  market_sync_service.py  portfolio_service.py  simulation_service.py
backend/tests/: conftest.py  test_ai_chat.py  test_auth.py  test_dashboard.py  test_dividends.py  test_glossary.py  test_market.py  test_market_sync.py  test_portfolio_position.py  test_simulations.py  test_transactions.py  test_users.py
(+100 files in other folders)
