[project]
name = "financemind-backend"
version = "0.1.0"
description = "FinanceMind API — educação e acompanhamento de investimentos"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "passlib[argon2]>=1.7",
    "pyjwt>=2.9",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "redis>=5.1",
    "resend>=2.4",
]

[project.optional-dependencies]
ai = [
    "langchain>=0.3",
    "langchain-groq>=0.2",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "joblib>=1.4",
]
billing = [
    "stripe>=11.1",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
